--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">New Application</string>
+    <string name="first_quarter">Fisrt quarter</string>
+    <string name="second_quarter">Second quarter</string>
 </resources>
